# i2t-f3

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/i2tf3/: __init__.py
src/i2tf3/presentation/: cli.py
