[tool.poetry]
name = "i2tf3"
version = "0.1.0"
description = ""
authors = ["sumeshi <sum3sh1@protonmail.com>"]

[tool.poetry.scripts]
i2tf3 = 'i2tf3:run'

[tool.poetry.dependencies]
python = "^3.9"
evtx2es = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
